fix: address Sourcery review feedback (PR #1)
- Fix coverage exclusion regex in pyproject.toml (#2)
- Fix import command name in feature-plan.md (#8)
- Add Sourcery review with priority matrix assessment

Remaining items deferred to Phase 4 (test improvements)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,6 @@ branch = true
 [tool.coverage.report]
 exclude_lines = [
     "pragma: no cover",
-    "if __name__ == .__main__.:",
+    'if __name__ == "__main__":',
 ]
 
