test(phase-4): add comprehensive tests (Task 1)
Added comprehensive test suite:
- Created conftest.py with test fixtures (mock_xdg_dirs, sample_inventory, mock_api_client)
- Created test_config_integration.py (5 tests for config save/load/env override)
- Created test_api_client_integration.py (5 integration tests, marked with @pytest.mark.integration)
- Created test_cli_integration.py (11 CliRunner tests for actual command behavior)
- Updated test_package.py to handle PackageNotFoundError (PR #4 deferred issue)
- Registered integration marker in pyproject.toml

Coverage improvement: 14% → 32% (18 percentage points)

Addresses deferred issues:
- PR #2 #2: CliRunner tests for actual command behavior ✅
- PR #4: Handle PackageNotFoundError in test ✅

Related: Phase 4 - Task 1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
 addopts = "-v"
+markers = [
+    "integration: marks tests as integration tests (requires external services)",
+]
 
 [tool.coverage.run]
 source = ["src/proj"]
